# beaver

./: .dockerignore  .gitignore  .nojekyll  CHANGELOG.md  README.md  STATUS.md  design.md  dev-architecture.html  dev-concurrency.html  dev-contributing.html  dev-search.html  dockerfile  guide-blobs.html  guide-channels.html  guide-collections.html  guide-concurrency.html  guide-deployment.html  guide-deployment.md  guide-dicts-blobs.html  guide-dicts.html  guide-lists-queues.html  guide-lists.html  guide-locks.html  guide-locks.md  guide-logs.html  guide-queues.html  guide-realtime.html  guide-sketches.html  guide.html  index.html  intro.html  makefile  pull-issues.sh  push-issues.sh  pyproject.toml  pytest.ini  quickstart.html  references.html  roadmap.md  robots.txt  (+2 more)
beaver/: __init__.py  _fracdex.py  api.py  blobs.py  bridge.py  cache.py  channels.py  cli.py  client.py  collections.py  core.py  dicts.py  docs.py  errors.py  events.py  graphs.py  interfaces.py  lists.py  locks.py  logs.py  manager.py  queries.py  queues.py  security.py  server.py  sketches.py  subscribers.py  types.py  vectors.py
docs/: _quarto.yml  dev-architecture.md  dev-architecture.qmd  dev-concurrency.md  dev-contributing.md  dev-search.md  guide-blobs.md  guide-channels.md  guide-collections.md  guide-concurrency.qmd  guide-deployment.md  guide-dicts-blobs.md  guide-dicts.md  guide-lists-queues.qmd  guide-lists.md  guide-logs.md  guide-queues.md  guide-realtime.qmd  guide-sketches.md  guide.md  index.html  index.qmd  intro.md  migration-rc3-to-rc4-lists.md  quickstart.md
examples/: async_pubsub.py  blobs.py  cache.py  fts.py  fuzzy.py  general_test.py  graph.py  kvstore.py  list.py  locks.py  logs.py  perf.py  perffts.py  perfvector.py  pqueue.py  producer_consumer.py  publisher.py  pubsub.py  rerank.py  stress_vectors.py  subscriber.py  textual_chat.css  textual_chat.py  type_hints.py  vector.py
issues/: 10-expose-dblock-functionality-on-all-high-level-data-managers.md  11-a-new-issue-for-gabriel.md  12-add-dump-method-for-json-export-to-all-data-managers.md  13-adopt-pydantic-deprecate-beavermodel-and-refactor-document-to-be-generic.md  13-refactor-adopt-pydantic-deprecate-beavermodel-and-refactor-document-to-be-generic.md  14-deprecate-fire-based-cli-and-build-a-feature-rich-typer-and-rich-cli.md  15-enhance-cli-with-admin-commands-shell-piping-and-interactivity.md  16-add-clear-method-for-all-data-structures.md  17-replace-atomic-operations-with-custom-beaver-lock.md  18-enhanced-dump-and-load-for-etl.md  19-add-comprehensive-unit-integration-and-concurrency-test-suite.md  2-comprehensive-async-wrappers.md  2.md  20-add-comprehensive-unit-integration-and-concurrency-test-suite.md  21-implement-dbcache-property-with-wal-invalidation-dummy-fallback-and-performance-stats.md  22-add-context-manager-support-and-robust-process-wide-cleanup-to-beaverdb.md  23-global-event-listeners-api.md  24-refactor-vectorindex-to-be-a-swappable-strategy-and-add-lsh-implementation.md  24-refactor-vectorindex-to-be-a-swappable-strategy-and-add-persistent-lsh-implementation.md  25-refactor-core-to-async-first-architecture-with-sync-bridge.md  26-refactor-core-to-async-first-architecture-with-sync-bridge.md  27-batched-operations-api-batched.md  4.md  (+19 more)
(+104 files in other folders)
