[project]
name = "beaver-db"
version = "0.24.1"
description = "Fast, embedded, and multi-modal DB based on SQLite for AI-powered applications."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "numpy>=2.3.4",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
beaver = "beaver.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["beaver"]

[project.optional-dependencies]
remote = ["fastapi[standard]>=0.118.0"]
full = ["beaver-db[remote]"]

[dependency-groups]
dev = ["textual>=6.1.0"]
